# sisyphus

./: AGENTS.md  CLAUDE.md  index.html  package.json  test.db  vite.config.js
contrib/: .gitignore  PKGBUILD
misc/: convex_task_scheduling_v2.md
scripts/: convert_cao.py
src/: App.css  App.jsx  main.jsx  shortcuts.js  strings.js  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 00000000000000_initial.sql  00000000000002_add_parent.sql  00000000000003_add_scheduling.sql  00000000000004_add_sheets.sql  00000000000005_add_effort.sql  00000000000006_add_schedule.sql  00000000000007_add_scheduling_model.sql  00000000000009_dirichlet_hour_key.sql  00000000000010_add_task_indexes.sql  00000000000011_add_remote_sync.sql
src-tauri/src/: calendar.rs  commands.rs  energy.rs  lib.rs  main.rs  nb.rs  remote_sync.rs  scheduler.rs  state.rs  sync.rs
src/api/: chunkConfig.js  remoteSync.js  store.js  sync.js  tasks.js  ui.js  utils.js
src/api/utils/: date.js
src/components/: DateModal.css  DateModal.jsx  DatePicker.css  DatePicker.jsx  LazyChunk.jsx  RRuleModal.css  RRuleModal.jsx  ReplyArrows.css  ReplyArrows.jsx  TagExtension.js  TagSuggestion.css  TagSuggestion.jsx  TaskBlock.css  TaskBlock.jsx  TaskNodeView.jsx  Tour.css  Tour.jsx
src/views/: Action.css  Action.jsx  Auth.css  Auth.jsx  Browse.css  Browse.jsx  Completed.css  Completed.jsx  Debug.css  Debug.jsx  Editor.css  Editor.jsx  Settings.css  Settings.jsx  Training.css  Training.jsx
