[package]
name = "sisyphus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sisyphus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = "0.4"
osqp = "0.6"
nalgebra = "0.33"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
ical = "0.11"
